metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send_Member__c/LiveText__Campaign_Send_Member__c.object-meta.xml
<CustomObject>
    <description>The Campaign Send Member object represents a member of a Send.</description>
    <label>Campaign Send Member</label>
    <nameField>
        <label>Campaign Send Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampaignSendMembers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>