metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send_Member__c/fields/LiveText__CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>LiveText__CampaignMemberId__c</fullName>
    <description>Id of the Campaign Member.</description>
    <inlineHelpText>Id of the Campaign Member.</inlineHelpText>
    <label>CampaignMemberId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>