metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send_Member__c/fields/LiveText__CampaignSend__c.field-meta.xml
<CustomField>
    <fullName>LiveText__CampaignSend__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the CampaignSend.</description>
    <inlineHelpText>Lookup to the CampaignSend.</inlineHelpText>
    <label>CampaignSend</label>
    <referenceTo>LiveText__Campaign_Send__c</referenceTo>
    <relationshipLabel>CampaignSendMembers</relationshipLabel>
    <relationshipName>CampaignSendMembers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>