metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send_Member__c/fields/LiveText__FromNumber__c.field-meta.xml
<CustomField>
    <fullName>LiveText__FromNumber__c</fullName>
    <description>Formula to CampaignSend Support Number.</description>
    <formula>LiveText__CampaignSend__r.LiveText__SupportNumber__r.LiveText__Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to CampaignSend Support Number.</inlineHelpText>
    <label>FromNumber</label>
    <type>Text</type>
</CustomField>