metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send_Member__c/fields/LiveText__isProcessed__c.field-meta.xml
<CustomField>
    <fullName>LiveText__isProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this member has been processed.</description>
    <inlineHelpText>Whether or not this member has been processed.</inlineHelpText>
    <label>isProcessed</label>
    <type>Checkbox</type>
</CustomField>