metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send_Member__c/fields/LiveText__Phone__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Phone__c</fullName>
    <description>Preferred phone number from Campaign Member.</description>
    <inlineHelpText>Preferred phone number from Campaign Member.</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>